--- a/src/forecast_03_nodata.html
+++ b/src/forecast_03_nodata.html
@@ -173,7 +173,7 @@
 								<!-- // Pagination -->
 							</div>
 						</div>
-						<div class="list_table_row primary">
+						<div class="list_table_row">
 							<table class="list_table">
 								<thead>
 									<tr>
