--- a/src/forecast_03_write_event.html
+++ b/src/forecast_03_write_event.html
@@ -173,7 +173,7 @@
 								<!-- // Pagination -->
 							</div>
 						</div>
-						<div class="list_table_row primary">
+						<div class="list_table_row">
 							<table class="list_table">
 								<thead>
 									<tr>
@@ -542,10 +542,10 @@
 						</div>
 					</div>
 					<div class="field_footer_row">
-						<a href="#" class="btn_field_formbox cloudy">
+						<a href="#" class="btn_field_formbox cloudy big">
 							<span class="btn_field_formbox_text">취소</span>
 						</a>
-						<a href="#" class="btn_field_formbox primary">
+						<a href="#" class="btn_field_formbox primary big">
 							<i class="ico_field_formbox ico_check"></i>
 							<span class="btn_field_formbox_text">저장</span>
 						</a>
