--- a/src/policy_02_graph.html
+++ b/src/policy_02_graph.html
@@ -155,7 +155,11 @@
 							<div class="chart_content_flex_wrap">
 								<div class="chart_content_flex_cols">
 									<div class="chart_content_render">
-										<img src="./assets/images/temp_graphe03.png" style="vertical-align:top" alt="">
+										<!-- api render -->
+										<div style="height:100%;width:100%;display:flex;align-items:center;">
+											<img src="./assets/images/temp_graphe03.png" style="vertical-align:middle" alt="">
+										</div>
+										<!-- // api render -->
 									</div>
 								</div>
 							</div>
