--- a/src/admin_user_modify.html
+++ b/src/admin_user_modify.html
@@ -247,7 +247,7 @@
 					<div class="screen_subcontent_row">
 						<ul class="subcontent_form_tb">
 							<li>
-								<div class="subc_form_th_cols"><span class="subc_form_label imp">아이디</span></div>
+								<div class="subc_form_th_cols"><span class="subc_form_label">아이디</span></div>
 								<div class="subc_form_td_cols">
 									<div class="input_component_box small">
 										<input type="text" class="input_origin_item" placeholder="4~8자/ 국문, 영문, 숫자">
@@ -259,7 +259,7 @@
 								</div>
 							</li>
 							<li>
-								<div class="subc_form_th_cols"><span class="subc_form_label imp">이메일</span></div>
+								<div class="subc_form_th_cols"><span class="subc_form_label">이메일</span></div>
 								<div class="subc_form_td_cols">
 									<div class="input_component_box small">
 										<input type="text" class="input_origin_item" placeholder="ex) abc@abc.com">
@@ -271,7 +271,7 @@
 								</div>
 							</li>
 							<li>
-								<div class="subc_form_th_cols"><span class="subc_form_label imp">이름</span></div>
+								<div class="subc_form_th_cols"><span class="subc_form_label">이름</span></div>
 								<div class="subc_form_td_cols">
 									<div class="input_component_box small">
 										<input type="text" class="input_origin_item" value="김사용자" placeholder="2~16자 / 국문, 영문">
@@ -283,7 +283,7 @@
 								</div>
 							</li>
 							<li>
-								<div class="subc_form_th_cols"><span class="subc_form_label imp">전화번호</span></div>
+								<div class="subc_form_th_cols"><span class="subc_form_label">전화번호</span></div>
 								<div class="subc_form_td_cols">
 									<div class="input_component_box small">
 										<input type="text" class="input_origin_item" value="01012341234" placeholder="9~11자 / ‘-’없이 입력">
@@ -295,7 +295,7 @@
 								</div>
 							</li>
 							<li>
-								<div class="subc_form_th_cols"><span class="subc_form_label imp">소속</span></div>
+								<div class="subc_form_th_cols"><span class="subc_form_label">소속</span></div>
 								<div class="subc_form_td_cols">
 									<div class="input_component_box small">
 										<input type="text" class="input_origin_item" value="엠큐닉" placeholder="소속업체명">
@@ -307,7 +307,7 @@
 								</div>
 							</li>
 							<li>
-								<div class="subc_form_th_cols"><span class="subc_form_label imp">비밀번호</span></div>
+								<div class="subc_form_th_cols"><span class="subc_form_label">비밀번호</span></div>
 								<div class="subc_form_td_cols">
 									<div class="td_blockitem">
 										<div class="input_component_box small">
@@ -330,7 +330,7 @@
 								</div>
 							</li>
 							<li>
-								<div class="subc_form_th_cols"><span class="subc_form_label imp">권한</span></div>
+								<div class="subc_form_th_cols"><span class="subc_form_label">권한</span></div>
 								<div class="subc_form_td_cols">
 									<ul class="props_form_item_list">
 										<li>
@@ -379,6 +379,8 @@
 		});
 
 		searchForm();
+
+		formItemInit(); // 20230826 추가
 	</script>
 </body>
 </html>
