--- a/src/pw_search_step1.html
+++ b/src/pw_search_step1.html
@@ -77,6 +77,12 @@
 							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./assets/images/logo_kadif@2x.png" alt=""></a></li>
 							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./assets/images/logo_koti@2x.png" alt=""></a></li>
 							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./assets/images/logo_mqnic@2x.png" alt=""></a></li>
+
+							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./assets/images/logo_com01@2x.png" alt=""></a></li>
+							<li><a href="#" class="cform_elselogo type2" target="_blank" title="새창"><img src="./assets/images/logo_com02@2x.png" alt=""></a></li>
+							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./assets/images/logo_com03@2x.png" alt=""></a></li>
+							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./assets/images/logo_com04@2x.png" alt=""></a></li>
+							<li><a href="#" class="cform_elselogo" target="_blank" title="새창"><img src="./assets/images/logo_com05@2x.png" alt=""></a></li>
 						</ul>
 					</div>
 				</div>
@@ -96,7 +102,7 @@
 
 				document.querySelector("#sample_00").classList.add("warn");
 				document.querySelector("#sample_01").classList.add("warn");
-				document.querySelector("#sample_01").classList.add("focus");
+				document.querySelector("#sample_02").classList.add("focus");
 
 				document.querySelector("#sample_01 .input_origin_item").value = 'abc.com';
 				document.querySelector("#sample_02").classList.add("color_focus");
