3차 수정진행중 2

--- a/src/admin_user_modify.html
+++ b/src/admin_user_modify.html
@@ -249,25 +249,27 @@
 							<li>
 								<div class="subc_form_th_cols"><span class="subc_form_label">아이디</span></div>
 								<div class="subc_form_td_cols">
-									<div class="input_component_box small">
+									<!-- <div class="input_component_box small">
 										<input type="text" class="input_origin_item" placeholder="4~8자/ 국문, 영문, 숫자">
 										<span class="count_wrap">
 											<span class="count_text">0/0</span>
 										</span>
 										<button class="btn_form_reset"><span class="hdtext">리셋</span></button>
-									</div>
+									</div> -->
+									<div class="cform_data">User</div>
 								</div>
 							</li>
 							<li>
 								<div class="subc_form_th_cols"><span class="subc_form_label">이메일</span></div>
 								<div class="subc_form_td_cols">
-									<div class="input_component_box small">
+									<!-- <div class="input_component_box small">
 										<input type="text" class="input_origin_item" placeholder="ex) abc@abc.com">
 										<span class="count_wrap">
 											<span class="count_text">0/0</span>
 										</span>
 										<button class="btn_form_reset"><span class="hdtext">리셋</span></button>
-									</div>
+									</div> -->
+									<div class="cform_data">abc@abc.com</div>
 								</div>
 							</li>
 							<li>
