--- a/src/forecast_04_sim.html
+++ b/src/forecast_04_sim.html
@@ -195,13 +195,13 @@
 										<td><span class="tdtext">s_0000020</span></td>
 										<td><span class="tdtext">testID1</span></td>
 										<td><span class="tdtext">타입 A</span></td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">uc_0000020</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+2</span>
 											</div>
 										</td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">testS1</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+2</span>
@@ -214,13 +214,13 @@
 										<td><span class="tdtext">s_0000019</span></td>
 										<td><span class="tdtext">testID2</span></td>
 										<td><span class="tdtext">타입 C</span></td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">uc_0000020</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+5</span>
 											</div>
 										</td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">testS1</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+5</span>
@@ -233,13 +233,13 @@
 										<td><span class="tdtext">s_0000020</span></td>
 										<td><span class="tdtext">testID1</span></td>
 										<td><span class="tdtext">타입 A</span></td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">uc_0000020</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+2</span>
 											</div>
 										</td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">testS1</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+2</span>
@@ -252,13 +252,13 @@
 										<td><span class="tdtext">s_0000019</span></td>
 										<td><span class="tdtext">testID2</span></td>
 										<td><span class="tdtext">타입 C</span></td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">uc_0000020</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+5</span>
 											</div>
 										</td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">testS1</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+5</span>
