--- a/src/forecast_03.html
+++ b/src/forecast_03.html
@@ -208,13 +208,13 @@
 										<td><span class="tdtext">uc_0000020</span></td>
 										<td><span class="tdtext">testID1</span></td>
 										<td><span class="tdtext">이벤트 상황</span></td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">s_0000019</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+20</span>
 											</div>
 										</td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">testS2</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+2</span>
@@ -228,7 +228,7 @@
 										<td><span class="tdtext">uc_0000020</span></td>
 										<td><span class="tdtext">testID1</span></td>
 										<td><span class="tdtext">이벤트 상황</span></td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">s_0000019</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+2</span>
