--- a/src/forecast_03_write_event.html
+++ b/src/forecast_03_write_event.html
@@ -198,7 +198,7 @@
 										<td>
 											<span class="tdtext">s_0000019</span>
 										</td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">testS2</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+2</span>
@@ -213,13 +213,13 @@
 										<td><span class="tdtext">uc_0000020</span></td>
 										<td><span class="tdtext">testID1</span></td>
 										<td><span class="tdtext">이벤트 상황</span></td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">s_0000019</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+20</span>
 											</div>
 										</td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">testS2</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+2</span>
@@ -234,13 +234,13 @@
 										<td><span class="tdtext">uc_0000020</span></td>
 										<td><span class="tdtext">testID1</span></td>
 										<td><span class="tdtext">이벤트 상황</span></td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">s_0000019</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+20</span>
 											</div>
 										</td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">testS2</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+2</span>
@@ -258,7 +258,7 @@
 										<td>
 											<span class="tdtext">s_0000019</span>
 										</td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">testS2</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+2</span>
@@ -276,7 +276,7 @@
 										<td>
 											<span class="tdtext">s_0000019</span>
 										</td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">testS2</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+2</span>
@@ -294,7 +294,7 @@
 										<td>
 											<span class="tdtext">s_0000019</span>
 										</td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">testS2</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+2</span>
@@ -309,13 +309,13 @@
 										<td><span class="tdtext">uc_0000020</span></td>
 										<td><span class="tdtext">testID1</span></td>
 										<td><span class="tdtext">이벤트 상황</span></td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">s_0000019</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+20</span>
 											</div>
 										</td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">testS2</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+2</span>
@@ -330,13 +330,13 @@
 										<td><span class="tdtext">uc_0000020</span></td>
 										<td><span class="tdtext">testID1</span></td>
 										<td><span class="tdtext">이벤트 상황</span></td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">s_0000019</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+20</span>
 											</div>
 										</td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">testS2</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+2</span>
@@ -354,7 +354,7 @@
 										<td>
 											<span class="tdtext">s_0000019</span>
 										</td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">testS2</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+2</span>
@@ -372,7 +372,7 @@
 										<td>
 											<span class="tdtext">s_0000019</span>
 										</td>
-										<td>
+										<td class="type2">
 											<span class="tdtext">testS2</span>
 											<div class="data_count_box_wrap">
 												<span class="data_count_box">+2</span>
